Code and readibility improvements